package structural.composite.binary_tree;

public class NutLa extends Nut{
    public NutLa(int giaTri) {
        super(giaTri);
    }

    @Override
    public void duyet() {
        System.out.println(giaTri);
    }

    @Override
    public void themTrai(Nut n) {

    }

    @Override
    public void themPhai(Nut n) {

    }

    @Override
    public void xoaTrai() {

    }

    @Override
    public void xoaPhai() {

    }
}
